welcome.lessons.welcome.loopfor.LoopStairs.scala.error
Runner:8: error: '<-' expected but ')' found.
for (nbPas < 1 to 8) {
                   ^Runner:14: error: illegal start of simple expression
	}
        ^